--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<head>
+<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic"
+rel="stylesheet">
+</head>
 <h1>Hello a new one project!!!</h1>
