--- a/feature.html
+++ b/feature.html
@@ -4,6 +4,7 @@
     </head>
     <h1>Feature
         <button>Feature</button>
+        <script>Analitic </script>
 
     </h1>
     # <h1>Feature</h1>
